--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
+    "mysql2": "^3.11.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -28,6 +36,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "14.2.5"
   }
 }
