--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "lucide-react": "^0.454.0",
     "mysql2": "^3.11.3",
     "next": "14.2.5",
+    "next-themes": "^0.4.3",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13"
